# Mruwyy

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  playbar.rs
assets/: style.css
src/: lib.rs  main.rs
src/components/: account.rs  album.rs  dailyrecommend.rs  icons.rs  list copy.rs  list.rs  loading.rs  login.rs  mod.rs  playbar copy 2.rs  playbar copy.rs  playbar.rs  playlist.rs  settings.rs  sidebar.rs  singer.rs  stars.rs
